# python-rastertools

./: README.md  pyproject.toml  setup.cfg
notebooks/: demo.ipynb  tutorial.ipynb
rastertools/: __init__.py  eo.py  geom.py  io.py  query.py  sentinel2.py  utils.py
src/rastertools/: __init__.py  geom.py  utils.py
