[metadata]
name = rastertools
author = Nicklas Simonsen
author_email = nisi@dhigroup.com
description = Raster utility tools
version = 0.0.1

[options]
packages = find:
include_package_data = true
python_requires = >=3.10
install_requires = 
    numpy>=1.11.0
    matplotlib
    rasterio
    pandas
    geopandas
    xarray
    pyogrio
setup_requires = 
    setuptools >= 42.0